--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
         </head>
         <body>
             
-            <h1>JS for Beginners</h1>
-            <div id="content">
-
-                <p>blah blah blah</p>
-
-            </div>
-
+            <a href="#">Link 1</a>
+            <a href="#">Link 1</a>
+            <a href="#">Link 1</a>
+            <a href="#">Link 1</a>
+            <a href="#">Link 1</a>
+            <a href="#">Link 1</a>
 
             <script src="test.js"></script>
         
